# Raspberry_Pi

./: .env.example  .gitignore  .gitmodules  README.md  Raspberry_Pi_Minecraft_AI_Final_Spec.md
01_web_dashboard_fastapi/: .env.example  README.md  README.txt  coordinate_db_design.md  requirements.txt
02_autorun_monitor_recovery/: README.md  README.txt  dashboard.service  minecraft.service  watchdog.service  watchdog.sh
03_backup_to_nas/: README.md  README.txt  backup_policy.md  (+2 more)
06-1_phone_ai_bridge_android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/: CMakeLists.txt
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/src/ggml-cuda/: allreduce.cu  ggml-cuda.cu
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/src/ggml-hexagon/htp/: hmx-matmul-ops.c
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/src/ggml-metal/: ggml-metal-device.h
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/src/ggml-vulkan/: ggml-vulkan.cpp
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/ggml/src/ggml-webgpu/: ggml-webgpu-shader-lib.hpp  ggml-webgpu.cpp
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/include/: llama.h
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/tools/cli/: README.md
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/tools/completion/: README.md
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/tools/mtmd/: CMakeLists.txt
06-1_phone_ai_bridge_android/app/src/main/cpp/llama.cpp/tools/server/: README.md
(+516 files in other folders)
